Improved test folder structure